golangのコード修正時のホットリロードするための設定を修正 - docker-compose.yml   - コンテナ内の /app がリアルタイム同期するようにマウント - .air.toml   - build.post_cmd を記述しているとエラーになるので削除 - Dockerfile   - COPYはダウンロード後に実行する

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,12 +5,12 @@ WORKDIR /app
 # Air（ホットリロードツール）をインストール
 RUN go install github.com/air-verse/air@latest
 
-# ソースコードをコピー
-COPY . .
-
 # 依存関係をダウンロード
 COPY go.mod go.sum ./
 RUN go mod download
+
+# ソースコードと設定ファイルをコピー
+COPY . .
 
 # ポート8080を公開
 EXPOSE 8080
