--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
       DB_PORT: 3306
       DB_NAME: ledger
       PORT: 8080
+    volumes:
+      - ./backend:/app
     ports:
       - "8080:8080"
     depends_on:
