ログインAPIを追加 - ログイン成功時にアクセストークン、リフレッシュトークンを返す（ステートレス認証） - アクセストークン、リフレッシュトークンの有効期限は .env ファイルから取得する

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,9 +3,14 @@ ENV=develop
 # サーバーPORT
 PORT=8080
 
+# JWT設定
+JWT_SECRET=development-secret-key-change-in-production
+TOKEN_EXPIRATION_HOURS=1
+REFRESH_TOKEN_EXPIRATION_HOURS=1
+
 # DB設定
 DB_HOST=mysql
 DB_PORT=3306
-DB_NAME=myapp
-DB_USER=root
-DB_PASSWORD=password
+DB_NAME=ledger
+DB_USER=ledger_user
+DB_PASSWORD=ledger_pass
