--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,9 @@ JWT_SECRET=development-secret-key-change-in-production
 TOKEN_EXPIRATION_HOURS=1
 REFRESH_TOKEN_EXPIRATION_HOURS=1
 
+# CORS設定
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:80
+
 # DB設定
 DB_HOST=mysql
 DB_PORT=3306
