--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@
 .DS_Store
 *.pem
 
+# environment variables (local overrides)
+.env.local
+frontend/.env.local
+
 # debug
 npm-debug.log*
 yarn-debug.log*
