--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,6 @@
+# API の基本URL
+NEXT_PUBLIC_API_URL=http://localhost:8080
+
 # デモモード（ポートフォリオ公開時はtrueに）
 NEXT_PUBLIC_DEMO_MODE=true
 NEXT_PUBLIC_DEMO_EMAIL=admin@example.com
