--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "7.3.5",
     "@mui/material": "7.3.5",
     "@popperjs/core": "2.11.8",
@@ -40,26 +41,27 @@
     "@radix-ui/react-slot": "1.1.2",
     "@radix-ui/react-switch": "1.1.3",
     "@radix-ui/react-tabs": "1.1.3",
-    "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-toggle": "1.1.2",
+    "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-tooltip": "1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
-    "react-hook-form": "7.55.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
     "react-day-picker": "8.10.1",
+    "react-dom": "19.2.3",
+    "react-hook-form": "7.55.0",
     "react-resizable-panels": "^4.0.15",
     "recharts": "2.15.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "vaul": "1.1.2"
+    "vaul": "1.1.2",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
