--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "19.2.3",
     "react-hook-form": "7.55.0",
+    "react-intersection-observer": "^10.0.2",
     "react-resizable-panels": "^4.0.15",
     "recharts": "2.15.2",
     "sonner": "^2.0.7",
